linux: Detect docked docking stations correctly

Instead of counting the number of graphics outputs, check
all the devices the platform/dock_station subsystem that
export a "dock_station" type.

Based on patch by Armando Di Cianno <armando@goodship.net>

https://bugs.freedesktop.org/show_bug.cgi?id=36818